fix drag jump

--- a/style.css
+++ b/style.css
@@ -192,10 +192,14 @@
 }
 
 #content {
-	min-height: 100%;
-	min-width: 100%;
+	padding-left: 0px;
+	padding-right: 0px;
+	margin-right: 0px;
+	margin-left: 0px;
+	width: 100%;
+	height: 100%;
 }
-
+/* 
 .tabcontent {
 	background-image: url("pixelSpace.png");
 	height: 100%;
@@ -206,7 +210,7 @@
 	display: none;
 	padding: 100px 20px;
 	z-index: -1;
-}
+} */
 
 .gamespace {
 	z-index: 3;
@@ -279,7 +283,6 @@
 
 body,
 html {
-	margin: 0;
 	background: black url("asteroid_field.jpg");
 	height: 100%;
 	background-position: center;
